# aivoicechat

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .gitignore  Dockerfile  Dockerfile.dev  ENV_SETUP.md  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202510302322_add_conversation_sessions.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/v1/: __init__.py  assistant.py  conversations.py  settings.py  twilio.py
backend/app/core/: config.py  twilio_logging.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  assistant.py  conversation.py  instruction_template.py
backend/app/schemas/: __init__.py  assistant.py  conversation.py  instruction_template.py
backend/app/services/: __init__.py  assistant_service.py  audio_service.py  conversation_service.py  openai_service.py
backend/app/utils/: audio.py  numeric.py
backend/app/websockets/: media_stream.py
backend/recordings/: .gitkeep
backend/scripts/: ensure_local_db.py  start_local.sh
frontend/: Dockerfile  Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(platform)/: layout.tsx  page.tsx
frontend/src/app/assistant/: page.tsx
frontend/src/components/: app-sidebar.tsx
frontend/src/lib/: api.ts  config.ts  conversations.ts
frontend/src/types/: assistant.ts  conversations.ts
(+19 files in other folders)
